--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+FIREBASE_CREDENTIALS=storage/app/private/firebase/service-account-file.json
+FIREBASE_CONFIG=storage/app/private/firebase/config.json
